# stone-soup-tracking

./: .gitignore  Makefile  README.md  pre_commit.py  pyproject.toml  requirements.txt
ericsson/: stonesoup_example.py.orig
imm_experiments/: imm_outline.py
mht_experiments/: TO_MHT_ROADMAP.md  __init__.py  plotting.py  run_mfa_bearing_range.py  run_mfa_crossing.py  run_tomht_bearing_range.py  run_tomht_crossing.py
mht_experiments/helpers/: hypothesiser.py
mht_experiments/runners/: mfa_runner.py  tomht_runner.py
mht_experiments/scenarios/: bearing_range.py  bearing_range_mht_example.py  common.py  crossing_targets.py
mht_experiments/trackers/: mfa_tracker.py  tomht_tracker.py
